--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -757,3 +757,6 @@ tmap <delete>   eval -q fm.ui.taskview.task_remove()
 tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
+
+# always show hidden files
+set show_hidden true
