--- a/i3/config
+++ b/i3/config
@@ -51,8 +51,8 @@ new_window pixel 1
 # hide_edge_borders both
 
 # Set inner/outer gaps
-gaps inner 8
-gaps outer 4
+gaps inner 4
+gaps outer 2
 
 
 
@@ -170,7 +170,7 @@ bindsym $mod+Ctrl+Left resize grow width 1 px or 1 ppt
 ######################################
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+c kill
@@ -307,13 +307,13 @@ set $ws10 "10"
 #workspace $ws5 output HDMI-0
 
 # bind program to workspace and focus to them on startup:
-assign [class="alacritty"] $ws1
+#assign [class="kitty"] $ws1
 assign [class="google-chrome-stable"] $ws2
 #assign [class="firefox"] $ws2
 
 # automatic set focus new window if it opens on another workspace then the current:
-for_window [class=alacritty] focus
-for_window [class=google-chrome-stable] focus
+#for_window [class=alacritty] focus
+#for_window [class=google-chrome-stable] focus
 #for_window [class=(?i)firefox] focus
 #for_window [class=Thunar] focus
 #for_window [class=Thunderbird] focus
@@ -347,7 +347,7 @@ exec --no-startup-id blueberry-tray
 
 #transparency 
 #exec --no-startup-id xcompmgr -c -C -t-5 -l-5 -r4.2 -o.55 &
-exec --no-startup-id picom -CGb
+exec --no-startup-id picom --experimental-backend
 
 #networkmanager-applet
 exec --no-startup-id nm-applet
@@ -363,7 +363,7 @@ exec --no-startup-id xset s 480 dpms 600 600 600
 exec --no-startup-id dbus-launch dunst --config ~/.config/dunst/dunstrc
 
 # Autostart apps as you like
-exec --no-startup-id alacritty
+exec --no-startup-id kitty
 #exec --no-startup-id google-chrome-stable
 #exec --no-startup-id sleep 2 && xfce4-terminal
 #exec --no-startup-id firefox https://github.com/endeavouros-team/endeavouros-i3wm-setup/blob/main/README.md
@@ -429,17 +429,16 @@ exec_always --no-startup-id sleep 1 && /home/koteczek/.config/polybar/launch.sh
 # bluetooth
 exec_always --no-startup-id sleep 1 && /home/koteczek/.config/runbluetooth.sh
   
-## binding for rofi alacritty -e "vim"
+## binding for rofi kitty -e "vim"
 
 bindsym $mod+d exec "rofi -show run"
 
 ## binding for ranger
-bindsym $mod+r exec alacritty -e "ranger"
+bindsym $mod+r exec kitty -e "ranger"
 
 ##screensaver
 
 exec_always --no-startup-id sleep 1 && /home/koteczek/.config/screensaver.sh
 
 ## bind for vim/emacs run
-
-bindsym $mod+v exec xfce4-terminal -e "vim"
+bindsym $mod+v exec emacs
