--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
-background #000
-foreground #fcfcfa
+background #282c34
+foreground #fefefe
 
 cursor #fcfcfa
 cursor_text_color #000000
@@ -47,4 +47,7 @@ color7 #c678dd
 color15 #dfdfdf
 
 window_margin_width 10
-background_opacity 0.6
+background_opacity 0.7
+font_family Monofur Nerd Font
+font_size   13.5
+symbol_map  {(57504, 57506): 'PowerlineSymbols', (57520, 57523): 'PowerlineSymbols'}
