--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -16,8 +16,8 @@ size-transition = true
 #################################
 #             Corners           #
 #################################
-# requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 5.0;
+# requires: https0 
+corner-radius = .0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   #"class_g = 'awesome'",
@@ -191,7 +191,7 @@ active-opacity = 1.0;
 focus-exclude = [
   "class_g = 'Cairo-clock'",
   "class_g = 'Bar'",                    # lemonbar
-  "class_g = 'slop'"                    # maim
+  "class_g = 'slop'"
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
@@ -212,7 +212,7 @@ opacity-rule = [
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'kitty'",
   "100:class_g    = 'Alacritty'",
-  "80:class_g     = 'Polybar'",
+  "100:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
   "70:class_g     = 'TelegramDesktop'",
