--- a/polybar/config
+++ b/polybar/config
@@ -15,7 +15,7 @@
 ; https://github.com/jaagr/polybar/wiki/Configuration
 ; https://github.com/jaagr/polybar/wiki/Formatting
 ;
-;=====================================================
+;====================================================
 
 [global/wm]
 ;https://github.com/jaagr/polybar/wiki/Configuration#global-wm-settings
@@ -46,7 +46,7 @@ format-offset =
 
 [colors]
 ; Nord theme ============
-background = #aa282c34
+background = #282c34
 foreground = #fff
 alert = #bd2c40
 volume-min = #a3be8c
@@ -83,16 +83,16 @@ volume-max = #bf616a
 [bar/example]
 ;https://github.com/jaagr/polybar/wiki/Configuration
 
-monitor = ${env:MONITOR}
+monitor = HDMI-0
 ;monitor-fallback = HDMI1
 monitor-strict = false
-override-redirect = false
+override-redirect = true
 bottom = false
-fixed-center = true
-width = 100%
+fixed-center = false
+width = 98%
 height = 20
-;offset-x = 1%
-;offset-y = 1%
+offset-x = 1%
+offset-y = 4px
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -101,20 +101,18 @@ foreground = ${colors.foreground}
 ;   background-[0-9]+ = #aarrggbb
 ;background-0 =
 
-radius = 0.0
+radius = 2
 line-size = 2
 line-color = #000000
 
-border-size = 0
+border-size = 1
 ;border-left-size = 25
 ;border-right-size = 25
 ;border-top-size = 0
 ;border-bottom-size = 25
-border-color = #000000
-
-padding-left = 1
+border-color = #52b788
+#padding-left = 1
 #padding-right = 1
-margin-right = 1
 module-margin-left = 0
 module-margin-right = 0
 
@@ -124,11 +122,11 @@ font-1 = "UbuntuMono Nerd Font:size=18;3"
 font-2 = "Font Awesome 5 Free:style=Regular:pixelsize=10;1"
 font-3 = "Font Awesome 5 Free:style=Solid:pixelsize=10;1"
 font-4 = "Font Awesome 5 Brands:pixelsize=10;1"
-font-5 = "siji:pixelsize=20;1"
+font-5 = "Hack:size=15;3" 
 
-modules-left = i3  xwindow
-modules-center =
-modules-right = filesystem arrow2 memory2 arrow3 cpu2 arrow2 pulseaudio arrow3 wlan arrow2 date arrow4 powermenu
+modules-left = i3 xwindow 
+modules-center = 
+modules-right = crypto filesystem memory2 cpu2 pulseaudio date powermenu
 
 separator =
 
@@ -608,16 +606,16 @@ fuzzy-match = false
 ;http://fontawesome.io/cheatsheet/
 ;       v     
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-9 = 10;
+ws-icon-0 = 1
+ws-icon-1 = 2
+ws-icon-2 = 3
+ws-icon-3 = 4
+ws-icon-4 = 5
+ws-icon-5 = 6
+ws-icon-6 = 7
+ws-icon-7 = 8
+ws-icon-8 = 9
+ws-icon-9 = 10
 ws-icon-default = ""
 
 ; Available tags:
@@ -626,7 +624,7 @@ ws-icon-default = ""
 format = <label-state> <label-mode>
 
 label-mode = %mode%
-label-mode-margin = 1
+;label-mode-margin = 1
 label-mode-foreground = #000000
 label-mode-background = #FFBB00
 
@@ -637,29 +635,30 @@ label-mode-background = #FFBB00
 ;   %output%
 ; Default: %icon%  %name%
 ; focused = Active workspace on focused monitor
-label-focused = %icon% %index% %icon%
-label-focused-background = #aa90fcf9
+label-focused = %icon%  %index%  %icon%
+label-focused-background = #52b788
 label-focused-foreground = #fff
-label-focused-underline = #fefefe
-label-focused-padding = 0.5
-label-focused-margin-right = 1
+label-focused-underline = #52b788
+label-focused-font = 5
+;label-focused-margin-right = 1
 ; Available tokens:
 ;   %name%
 ;   %icon%
 ;   %index%
 ; Default: %icon%  %name%
 ; unfocused = Inactive workspace on any monitor
-label-unfocused = %icon% %index% %icon%
+label-unfocused = %icon%  %index%  %icon%
 label-unfocused-padding = 
-label-unfocused-background = #ff5d8f
+label-unfocused-background = #495057
 label-unfocused-foreground = #fff
 label-unfocused-underline = 0.5
-label-unfocused-margin-right = 1
+label-unfocused-font = 5
+;label-unfocused-margin-right = 1
 ; visible = Active workspace on unfocused monitor
 label-visible = %icon% %name%
 label-visible-background = ${self.label-focused-background}
 label-visible-underline = ${self.label-focused-underline}
-label-visible-padding = 1
+;label-visible-padding = 1
 
 ; Available tokens:
 ;   %name%
@@ -670,7 +669,7 @@ label-visible-padding = 1
 label-urgent = %icon% %name%
 label-urgent-background = ${self.label-focused-background}
 label-urgent-foreground = #db104e
-label-urgent-padding = 2
+label-urgent-padding = 
 
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
@@ -757,7 +756,7 @@ format-background = ${colors.background}
 [module/arrow0]
 ; grey to Blue
 type = custom/text
-content = "%{T2}%{T-}"
+content = "%{T2}|%{T-}"
 content-font = 2
 content-foreground = #aa
 content-background = #aa
@@ -792,11 +791,26 @@ content-background = #aa
 [module/arrow4]
 ;strzałka dla zasilania
 type = custom/text
-content = "%{T2}%{T-}"
+content = "%{T2} %{T-}"
 content-font = 2
 content-foreground = #ef476f
 content-background = #aa
 
+[module/begin]
+; grey to Blue
+type = custom/text
+content = "%{T2}[%{T-}"
+content-font = 2
+content-foreground = #aa
+content-background = #282c34
+
+[module/end]
+; grey to Blue
+type = custom/text
+content = "%{T2}]%{T-}"
+content-font = 1
+content-foreground = #aa
+content-background = #282c34
 
 ################################################################################
 ###############################################################################
@@ -816,21 +830,26 @@ format-background = ${colors.background}
 #format-prefix-underline = #aa
 #format-underline = #7D49B6
 ################################################################################
-
+[module/crypto]
+type = custom/script
+exec = ~/.config/polybar/scripts/ticker-crypto.sh
+interval = 600
+format-background = #aa
+format-foreground = #ffafcc
 [module/wlan]
 type = internal/network
 interface = wlp3s0
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = [<ramp-signal> <label-connected>]
 
-label-connected = %essid%
+label-connected =   %essid% 
 
-format-connected-foreground = #303541
-format-connected-background = #D08770
+format-connected-foreground = #D08770
+format-connected-background = #282c34
 #format-connected-prefix-foreground = #cd1f3f
-format-connected-underline = #D08770
-format-connected-padding = 1
+format-connected-underline = #282c34
+format-connected-padding = 
 ;format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
 ;label-disconnected = %ifname% disconnected
@@ -844,17 +863,15 @@ ramp-signal-4 = 
 [module/filesystem]
 type = internal/fs
 interval = 25
-
 mount-0 = /
-format-mounted-padding = 1
-label-mounted = %{F#303541}%mountpoint%%{F#303541}: %percentage_used%%
+format-mounted-padding = 
+label-mounted = %{F#ebcb8b}[%{F#ebcb8b}%mountpoint%%{F#ebcb8b}: %percentage_used%%%{F#ebcb8b}]
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
 format-mounted-foreground = #303541
 format-mounted-prefix-foreground = #303541
-format-mounted-background = #ebcb8b
-format-mounted-underline = #EBCB8B
-
+format-mounted-background = #282c34
+format-mounted-underline = #282c34
 [module/powermenu]
 type = custom/menu
 
@@ -865,29 +882,28 @@ format-background =
 format-foreground =
 format-padding =
 
-label-open = "  "
-label-open-padding = 1
-label-open-foreground = #fefefe
-label-open-background = #ef476f
-label-close = cancel
+label-open = "[ ] "
+label-open-foreground = #ef476f
+label-open-background = #aa
+label-close = [ cancel
 label-close-padding = 1
-label-close-foreground = #fff
-label-close-background =  #ef476f
-label-separator =|
+label-close-foreground = #ef476f
+label-close-background =  #aa
+label-separator =
 label-separator-foreground = ${colors.foreground-alt}
 menu-0-0 = reboot
 menu-0-0-exec = menu-open-1
-menu-0-1 = power off
+menu-0-1 = power off ]
 menu-0-1-exec = menu-open-2
 
 menu-1-0 =  cancel
 menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
+menu-1-1 = reboot ]
 menu-1-1-exec = reboot
 
-menu-2-0 = power off
+menu-2-0 = power off 
 menu-2-0-exec = poweroff
-menu-2-1 = cancel
+menu-2-1 = cancel ]
 menu-2-1-exec = menu-open-0
 
 [module/backlight]
@@ -1041,13 +1057,12 @@ type = internal/cpu
 ; Seconds to sleep between updates
 ; Default: 1
 interval = 1
-format-foreground = #303541
+format-foreground = #88C0D0
 #"fore is font"
-format-background = #88C0D0
-format-prefix = " "
-format-prefix-foreground = #303541
-format-underline = #88C0D0
-format-padding = 1
+format-background = #282c34
+format-prefix = "[ "
+format-prefix-foreground = #88C0D0
+format-underline = #282c34
 label-font = 1
 
 ; Available tags:
@@ -1062,7 +1077,7 @@ format = <label>
 ;   %percentage% (default) - total cpu load
 ;   %percentage-cores% - load percentage for each core
 ;   %percentage-core[1-9]% - load percentage for specific core
-label = Cpu %percentage:3%%
+label = Cpu %percentage:3%%%{F#88C0D0}]
 
 ################################################################################
 
@@ -1073,15 +1088,15 @@ type = internal/date
 interval = 5
 ; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
-date = " %a %b%d"
+date = " %b %d"
 date-alt = " %a %b %d, %Y"
 time = %l:%M%p
 time-alt = %l:%M%p
-format-prefix =  "   "
-format-prefix-foreground = #303541
-format-foreground = #303541
-format-background = #f2c6de
-label = "%date% %time%  "
+format-prefix =  "[ "
+format-prefix-foreground = #f2c6de
+format-foreground = #f2c6de
+format-background = #282c34
+label = "%date% %time%]"
 format-underline = 
 #################################################################
 
@@ -1221,15 +1236,14 @@ interval = 1
 ;   %mb_used%
 ;   %mb_free%
 ;   %mb_total%
-label = %mb_used%
+label = %mb_used%%{F#A3BE8C}]
 
 format = Mem <label>
-format-prefix = "  "
-format-prefix-foreground = #303541
-format-foreground = #303541
-format-background = #A3BE8C
-format-underline = #A3BE8C
-format-padding = 1
+format-prefix = "[  "
+format-prefix-foreground = #A3BE8C
+format-foreground = #A3BE8C
+format-background = #282c34
+format-underline = #282c34
 
 ################################################################################
 
@@ -1332,12 +1346,12 @@ format-underline = #FFBB00
 type = internal/pulseaudio
 sink = alsa_output.pci-0000_00_1f.3.analog-stereo
 
-label-volume = "   %percentage%% "
+label-volume = "[  %percentage%%]"
 
 label-muted = "  Mute "
-format-volume-underline = #B48EAD
-format-volume-foreground = #303541
-format-volume-background = #B48EAD
+format-volume-underline = #282c34
+format-volume-foreground = #B48EAD
+format-volume-background = #282c34
 format-muted-foreground = ${colors.color0}
 format-muted-background = ${colors.color4}
 
@@ -1664,13 +1678,13 @@ type = internal/xwindow
 ; Available tokens:
 ;   %title%
 ; Default: %title%
-label = %title%
-label-maxlen = 30
+label =[ %title% ]
+label-maxlen = 
 format-margin = 3
 format-prefix =
 format-prefix-underline = #fff
-format-underline = #fff
-format-foreground = #fff
+format-underline =
+format-foreground = 
 format-background = ${colors.background}
 
 ###############################################################################
