new and changed

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -17,7 +17,7 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https0 
-corner-radius = .0;
+corner-radius = 2;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   #"class_g = 'awesome'",
@@ -218,7 +218,7 @@ opacity-rule = [
   "70:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Joplin'",
   "100:class_g    = 'firefox'",
-  "100:class_g    = 'Thunderbird'"
+  "85:class_g    = 'st-256color'"
 ];
 
 
